Prepare runTests.sh template script